🍧🎩 Checkpoint ./public/style.css:21466666/1905:21478230/1950 ./config/y:21478230/391 ./config/key.js:21478230/148 ./views/partials/addNew.ejs:21466666/2789 ./views/partials/welcome.ejs:21406927/402 ./views/partials/added.ejs:21466666/1613 ./config/passport.js:21478230/1023 ./views/partials/adminlogin:21466666/1613 ./models/admin.js:21478230/373 ./views/partials/vendors.ejs:21406927/2425 ./models/User.js:21478230/371 ./models/product.js:21478230/335 ./views/partials/adminregister.ejs:21466666/1931 ./views/partials/register.ejs:21406927/1893 ./models/vendor.js:21478230/294 ./views/partials/productadmin.ejs:21406927/2495 ./views/partials/dminlogin.ejs:21466666/894 ./views/partials/product.ejs:21406927/2719 ./views/partials/cart.ejs:21466666/3486 ./views/partials/mine.ejs:21406927/2233 ./routes/admin.js:21478230/4278 ./views/partials/dashboard.ejs:21466666/394 ./routes/index.js:21478230/5098 ./views/partials/edit.ejs:21466666/394 ./routes/user.js:21478230/2341 ./package.json:21478230/7336 ./views/partials/index.ejs:21466666/5546

--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: helvetica, arial, sans-serif;
+  font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
   margin: 2em;
 }
 
@@ -26,7 +26,6 @@ p {
 form {
   margin-bottom: 25px;
   padding: 15px;
-  background-color: cyan;
   display: inline-block;
   width: 100%;
   max-width: 340px;
@@ -64,8 +63,13 @@ li {
   margin-bottom: 5px;
 }
 
-footer {
+footer.end {
   margin-top: 50px;
   padding-top: 25px;
   border-top: 1px solid lightgrey;
+  float: left;
+  width: 100%;
 }
+
+
+
