🚅🏯 Checkpoint ./views/product.ejs:21466666/61 ./views/mine.ejs:21466666/63 ./views/index.ejs:21466666/75 ./views/vendors.ejs:21466666/40

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello Shoes!</title>
+    <title>Hello Customers!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
  <link rel="stylesheet" href="public/styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -19,7 +19,7 @@
   <div class="container-fluid">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   
-  <h2 style="color:white;">&nbsp;&nbsp;Venom&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+  <h2 style="color:white;">&nbsp;&nbsp;Pitts Restaurant&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
     
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
    <span class="navbar-toggler-icon"></span>
@@ -28,8 +28,8 @@
   <div class="collapse navbar-collapse" id="navbarResponsive">      
     <ul class="navbar-nav mr-auto">
       <li class="nav-item"><a class="nav-link active" href="/index">Home</a></li>
-      <li class="nav-item"><a class="nav-link" href="/product">Check All Shoes</a></li>
-      <li class="nav-item"><a class="nav-link" href="/vendors">Check All Brands</a></li>
+      <li class="nav-item"><a class="nav-link" href="/product">Menu</a></li>
+      <li class="nav-item"><a class="nav-link" href="/vendors">Types</a></li>
     </ul>
         
      <ul class="navbar-nav ml-auto"> 
