--- a/views/mine.ejs
+++ b/views/mine.ejs
@@ -16,7 +16,7 @@
   <div class="container-fluid">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   
-  <h2 style="color:white;">&nbsp;&nbsp;Venom&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+  <h2 style="color:white;">&nbsp;&nbsp;Pitts Restaurant&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
     
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
    <span class="navbar-toggler-icon"></span>
@@ -25,8 +25,8 @@
   <div class="collapse navbar-collapse" id="navbarResponsive">      
     <ul class="navbar-nav mr-auto">
       <li class="nav-item"><a class="nav-link" href="/index">Home</a></li>
-      <li class="nav-item"><a class="nav-link" href="/product">Check All Shoes</a></li>
-      <li class="nav-item"><a class="nav-link" href="/vendors">Check All Brands</a></li>
+      <li class="nav-item"><a class="nav-link" href="/product">Menu</a></li>
+      <li class="nav-item"><a class="nav-link" href="/vendors">Types</a></li>
     </ul>
         
      <ul class="navbar-nav ml-auto"> 
