🌔🍏 Checkpoint ./views/productadmin.ejs:21466666/143 ./views/vendors.ejs:21466666/142 ./views/product.ejs:21466666/121 ./views/mine.ejs:21466666/122 ./views/index.ejs:21466666/620 ./.glitch-assets:21466666/968:21478230/1304 ./public/style.css:21466666/162

--- a/public/style.css
+++ b/public/style.css
@@ -63,13 +63,8 @@ li {
   margin-bottom: 5px;
 }
 
-footer.end {
-  margin-top: 50px;
-  padding-top: 25px;
-  border-top: 1px solid lightgrey;
-  float: left;
-  width: 100%;
+.carousel-inner img {
+  width:10px;
 }
-
 
 
