--- a/views/productadmin.ejs
+++ b/views/productadmin.ejs
@@ -16,7 +16,7 @@
   <div class="container-fluid">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   
-  <h2 style="color:white;">&nbsp;&nbsp;Venom&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+  <h2 style="color:white;">&nbsp;&nbsp;Pitts Restaurant&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
     
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
    <span class="navbar-toggler-icon"></span>
@@ -72,9 +72,5 @@
   </div>
     <br/><br/><br/><br/>
     
-
-<footer class="container-fluid bg-dark">
-<p class="m-0 text-center text-white">Copyright &copy; Venom 2020</p>
-</footer>
 </body>
 </html>
