💗💅 Checkpoint ./public/style.css:21466666/161 ./.glitch-assets:21466666/966:21478230/3657 ./views/index.ejs:21466666/3262

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,10 +59,10 @@
         <img src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F118f34f9-1ee0-4c70-a2ac-f22fae6a1d80.image.png?v=1605316037630" alt="Image" class="d-block w-100">
       </div>
       <div class="carousel-item">
-        <img src="https://cdn.glitch.com/5cd51d0c-e582-4761-9e46-2f33c7d5c872%2F5279775b-fd83-448a-88db-8017f38dd847.image.png?v=1587277520453" alt="Image" class="d-block w-100">
+        <img src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2Fmain.jpeg?v=1605316169908" alt="Image" class="d-block w-100">
       </div>
        <div class="carousel-item">
-        <img src="https://cdn.glitch.com/5cd51d0c-e582-4761-9e46-2f33c7d5c872%2Fe039c991-f7be-4a6a-9f82-7920d70e0b8b.image.png?v=1587278081897" alt="Image" class="d-block w-100">
+        <img src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2Fnoo.jpeg?v=1605316404562" alt="Image" class="d-block w-100">
       </div>
     </div>
     
@@ -87,36 +87,66 @@
     
     <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <img class="card-img-top" src="https://cdn.glitch.com/5cd51d0c-e582-4761-9e46-2f33c7d5c872%2F3593db09-3732-4a6d-92f1-a4ee831d9313.image.png?v=1587279433595" alt="">
+              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F11540.jpg?v=1605316430226" alt="">
               <div class="card-body">
                 <h4 class="card-title">
-                  <p>Jordan 11 Retro Playoffs Bred (2019)</p>
+                  <p>Noodles & Pasta</p>
                 </h4>
-                <h5>$220</h5>
                 </div>
             </div>
           </div>
     
      <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <img class="card-img-top" src="https://cdn.glitch.com/1ef72584-6f5a-4f1f-be95-76248bbd816f%2Ftrue-2_2.jpg?v=1585334460179" alt="">
+              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2Fa13a4dc9-ba2e-41dd-956f-4bdcf9ddb57b.image.png?v=1605316595694" alt="">
               <div class="card-body">
                 <h4 class="card-title">
                   <p>True2</p>
                 </h4>
-                <h5>$120</h5>
                         </div>
             </div>
           </div>
     
      <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <img class="card-img-top" src="https://cdn.glitch.com/1ef72584-6f5a-4f1f-be95-76248bbd816f%2Fadidas-yeezy-350-v2-bred-CP9652-1.jpg?v=1585334359133" alt="">
+              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F899b21af-f83a-4e96-ac73-500ba7410b1a.image.png?v=1605316549392" alt="">
               <div class="card-body">
                 <h4 class="card-title">
-                  <p>Yeezyboost</p>
+                  <p>Dessert</p>
                 </h4>
-                <h5>$225</h5>
+                      </div>
+            </div>
+          </div>
+    
+    <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card h-100">
+              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F11540.jpg?v=1605316430226" alt="">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <p>Noodles & Pasta</p>
+                </h4>
+                </div>
+            </div>
+          </div>
+    
+     <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card h-100">
+              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F2018-01-Mexican-Chicken-Soup-1.jpg?v=1605316689335" alt="">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <p>Soup</p>
+                </h4>           
+                        </div>
+            </div>
+          </div>
+    
+     <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card h-100">
+              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F20191016025954974.jpg?v=1605316798451" alt="">
+              <div class="card-body">
+                <h4 class="card-title">
+                  <p>Poultry & Eggs</p>
+                </h4>
                       </div>
             </div>
           </div>
