🐉🎠 Checkpoint ./views/index.ejs:21466666/479 ./.glitch-assets:21466666/484:21478230/380 ./views/cart.ejs:21466666/40

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -25,8 +25,8 @@
   <div class="collapse navbar-collapse" id="navbarResponsive">      
     <ul class="navbar-nav mr-auto">
       <li class="nav-item"><a class="nav-link" href="/index">Home</a></li>
-      <li class="nav-item"><a class="nav-link" href="/product">Check All Shoes</a></li>
-      <li class="nav-item"><a class="nav-link" href="/vendors">Check All Brands</a></li>
+      <li class="nav-item"><a class="nav-link" href="/product">Menu</a></li>
+      <li class="nav-item"><a class="nav-link" href="/vendors">Types</a></li>
     </ul>
         
      <ul class="navbar-nav ml-auto"> 
