--- a/views/index.ejs
+++ b/views/index.ejs
@@ -98,10 +98,10 @@
     
      <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2Fa13a4dc9-ba2e-41dd-956f-4bdcf9ddb57b.image.png?v=1605316595694" alt="">
+              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F92b75d13-e69a-42d3-a65d-fe1f757efb1d.image.png?v=1605316978810" alt="">
               <div class="card-body">
                 <h4 class="card-title">
-                  <p>True2</p>
+                  <p>Main Dishes</p>
                 </h4>
                         </div>
             </div>
@@ -120,10 +120,10 @@
     
     <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F11540.jpg?v=1605316430226" alt="">
+              <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2Fapp.jpg?v=1605316308869" alt="">
               <div class="card-body">
                 <h4 class="card-title">
-                  <p>Noodles & Pasta</p>
+                  <p>Appetizers</p>
                 </h4>
                 </div>
             </div>
