--- a/views/addNew.ejs
+++ b/views/addNew.ejs
@@ -14,9 +14,9 @@
   
   
   <div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light text-light bg-warning fixed-top">
   
-  <h2 style="color:white;">&nbsp;&nbsp;Venom&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+  <h2 style="color:black;">&nbsp;&nbsp;Pitts Restaurant&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
     
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
    <span class="navbar-toggler-icon"></span>
@@ -24,8 +24,8 @@
     
   <div class="collapse navbar-collapse" id="navbarResponsive">      
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item"><a class="nav-link" href="/productadmin">Check All Shoes</a></li>
-      <li class="nav-item"><a class="nav-link active" href="/addNew">Add New Shoes</a></li>
+      <li class="nav-item"><a class="nav-link" href="/productadmin">Check All Cuisine</a></li>
+      <li class="nav-item"><a class="nav-link active" href="/addNew">Add New Cuisine</a></li>
     </ul>
         
      <ul class="navbar-nav ml-auto"> 
@@ -67,10 +67,6 @@
       <input class="form-control" type="number" name="price">
     </div>  </div>
     
-    <div class="form-group">
-      <label for="color">Color</label>
-      <input class="form-control" type="text" name="color">
-    </div>
     
     <div class="form-group">
       <label for="imageUrl">imageUrl</label>
@@ -82,8 +78,6 @@
   
   </div></div>
   <br/><br/><br/><br/>
-  <footer class="container-fluid bg-dark">
-<p class="m-0 text-center text-white">Copyright &copy; Venom 2020</p>
-</footer>
+  
 </body>
 
