--- a/views/added.ejs
+++ b/views/added.ejs
@@ -17,13 +17,13 @@
         <a class="nav-link active" href="/ ">Home</a >
       </li>
     <li class="nav-item">
-        <a class="nav-link active" href="/product">Check All Shoes</a >
+        <a class="nav-link active" href="/product">Check All Cuisine</a >
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="/addNew">Add New Shoes</a >
+        <a class="nav-link active" href="/addNew">Add New Cuisine</a >
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="/vendors">Check Brand</a >
+        <a class="nav-link active" href="/vendors">Check Cuisine</a >
       </li>
   </nav>
   
@@ -40,7 +40,6 @@
         <li class="list-group-item">NAME: <%= item.name %></li>
         <li class="list-group-item">BRAND: <%= item.brand %></li>
         <li class="list-group-item">PRICE: <%= item.price %></li>
-        <li class="list-group-item">COLOR: <%= item.color %></li>
         <li class="list-group-item">IMAGE: <%= item.shoeUrl %></li>
         <li class="list-group-item"><img src=<%= item.shoeUrl %> </li>
         
