--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,17 +9,17 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
   </head>
 <body>
   
+
   
   
 
   <div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light text-light bg-warning fixed-top">
   
-  <h2 style="color:white;">&nbsp;&nbsp;Pitts Restaurant&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+  <h2 style="color:black;">&nbsp;&nbsp;Pitts Restaurant&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
     
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
    <span class="navbar-toggler-icon"></span>
@@ -55,13 +55,13 @@
     </ol>
     
     <div class="carousel-inner">
-      <div class="carousel-item active">
+      <div class="carousel-item active" style = "height: 500px;">
         <img src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F118f34f9-1ee0-4c70-a2ac-f22fae6a1d80.image.png?v=1605316037630" alt="Image" class="d-block w-100">
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item" style = "height: 500px;">
         <img src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2Fmain.jpeg?v=1605316169908" alt="Image" class="d-block w-100">
       </div>
-       <div class="carousel-item">
+       <div class="carousel-item" style = "height: 500px;">
         <img src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2Fnoo.jpeg?v=1605316404562" alt="Image" class="d-block w-100">
       </div>
     </div>
@@ -90,7 +90,7 @@
               <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F11540.jpg?v=1605316430226" alt="">
               <div class="card-body">
                 <h4 class="card-title">
-                  <p>Noodles & Pasta</p>
+                  <p><a href="/producttype?type=1">Noodles & Pasta</a></p>
                 </h4>
                 </div>
             </div>
@@ -101,7 +101,7 @@
               <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F92b75d13-e69a-42d3-a65d-fe1f757efb1d.image.png?v=1605316978810" alt="">
               <div class="card-body">
                 <h4 class="card-title">
-                  <p>Main Dishes</p>
+                  <p><a href="/producttype?type=2">Main Dishes</a></p>
                 </h4>
                         </div>
             </div>
@@ -112,9 +112,9 @@
               <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F899b21af-f83a-4e96-ac73-500ba7410b1a.image.png?v=1605316549392" alt="">
               <div class="card-body">
                 <h4 class="card-title">
-                  <p>Dessert</p>
+                  <p><a href="/producttype?type=3">Dessert</a></p>
                 </h4>
-                      </div>
+              </div>
             </div>
           </div>
     
@@ -123,7 +123,7 @@
               <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2Fapp.jpg?v=1605316308869" alt="">
               <div class="card-body">
                 <h4 class="card-title">
-                  <p>Appetizers</p>
+                  <p><a href="/producttype?type=4">Appetizers</a></p>
                 </h4>
                 </div>
             </div>
@@ -134,7 +134,7 @@
               <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F2018-01-Mexican-Chicken-Soup-1.jpg?v=1605316689335" alt="">
               <div class="card-body">
                 <h4 class="card-title">
-                  <p>Soup</p>
+                  <p><a href="/producttype?type=5">Soup</a></p>
                 </h4>           
                         </div>
             </div>
@@ -145,7 +145,7 @@
               <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F20191016025954974.jpg?v=1605316798451" alt="">
               <div class="card-body">
                 <h4 class="card-title">
-                  <p>Poultry & Eggs</p>
+                  <p><a href="/producttype?type=6">Poultry & Eggs</a></p>
                 </h4>
                       </div>
             </div>
