--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,7 +6,7 @@
   </div>
   <div class="card-body">
     <h1 class="card-title">Leave?</h1>
-   <p class="card-text">See you later~<%= user.name %></p>
+   <p class="card-text">See you later, <%= user.name %></p>
    <a href="/users/logout" class="btn btn-secondary">Logout</a>
   </div>
 </div></div>
