--- a/views/product.ejs
+++ b/views/product.ejs
@@ -14,9 +14,9 @@
   
   
   <div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light text-light bg-warning fixed-top">
   
-  <h2 style="color:white;">&nbsp;&nbsp;Pitts Restaurant&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+  <h2 style="color:black;">&nbsp;&nbsp;Pitts Restaurant&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
     
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
    <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
       <tr><td >NAME: <%= product.name %></td></tr>
       <tr><td>BRAND: <%= product.brand %></td></tr>
       <tr><td>PRICE: <%= product.price %></td></tr>
-      <tr><td>COLOR: <%= product.color %></td></tr>
+
  <tr><td colspan="2" align="center"><form action="/addCart?id=<%= product.id %>" method="POST">
    
          <button class="btn btn-secondary btn-lg btn-block" type="submit">
