--- a/views/vendors.ejs
+++ b/views/vendors.ejs
@@ -11,9 +11,9 @@
   
   
   <div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light text-light bg-warning fixed-top">
   
-  <h2 style="color:white;">&nbsp;&nbsp;Pitts Restaurant&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
+  <h2 style="color:black;">&nbsp;&nbsp;Pitts Restaurant&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h2>
     
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
    <span class="navbar-toggler-icon"></span>
