--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -26,7 +26,6 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item"><a class="nav-link" href="/index">Home</a></li>
       <li class="nav-item"><a class="nav-link" href="/product">Menu</a></li>
-      <li class="nav-item"><a class="nav-link" href="/vendors">Types</a></li>
     </ul>
         
      <ul class="navbar-nav ml-auto"> 
@@ -51,7 +50,7 @@
      <table class="table table-bordered" style="max-width:90%;">
       <% list.forEach(function(product){ %>
       <tr>
-        <td width="60%" rowspan="5"><img src=<%= product.shoeUrl %> 
+        <td width="60%" rowspan="4"><img src=<%= product.shoeUrl %> 
                   alt="Screenshots of the games" width="100%"></td>
         <td >ID: <%= product.id %></td></tr>
       <tr><td >NAME: <%= product.name %></td></tr>
@@ -74,6 +73,11 @@
       <tr><td align="center"><form action="/clearCart" method="POST">
          <button class="btn btn-secondary btn-lg btn-block" type="submit">
            Clear Cart
+         </button>
+    </form></td></tr>
+      <tr><td align="center"><form action="/payCart" method="POST">
+         <button class="btn btn-secondary btn-lg btn-block" type="submit">
+           Pay Cart
          </button>
     </form></td></tr>
     </table> </div></div></div></div>
