--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,7 +81,7 @@
   <br/><br/><br/>
   
   <div class="container-fluid text-center">    
-  <h2>WHAT'S TRENDING</h2><br>
+  <h2>Select type here!</h2><br>
   <div class="row">
     
     <div class="col-lg-4 col-md-6 mb-4">
