--- a/views/mine.ejs
+++ b/views/mine.ejs
@@ -51,7 +51,7 @@
     <tr><td><strong>Name</strong></td><td><%= user.name %></td></tr>
      <tr><td><strong>Email</strong></td><td><%= user.email %></td></tr>
     </table>
-  <button class="btn btn-secondary btn-lg btn-block" onclick="location.href='/index'" type="button">
+  <button class="btn btn-secondary btn-lg btn-block btn-warning" onclick="location.href='/index'" type="button">
          Back to Home Page</button>
 </div></div>
   
