🗃🏪 Checkpoint ./views/addNew.ejs:21466666/24 ./views/edit.ejs:21466666/2486 ./views/productadmin.ejs:21466666/14 ./views/vendors.ejs:21466666/2308 ./routes/index.js:21406927/198

--- a/views/addNew.ejs
+++ b/views/addNew.ejs
@@ -39,7 +39,7 @@
   
  <div class="row justify-content-center">
   <div class="card" style="width:60%;">
-  <h2 class="card-header"><storng style="color: pink">Add</storng> New Shoes </h2>
+  <h2 class="card-header"><storng style="color: pink">Add</storng> New Cuisine </h2>
   
   <form style="padding:3%;" action="/addOne" method="post">
    
@@ -72,7 +72,7 @@
       <label for="imageUrl">imageUrl</label>
       <input class="form-control" type="text" name="imageUrl">
     </div>
-  <button class="btn btn-secondary btn-lg btn-block" type="submit"> Submit </button>
+  <button class="btn btn-secondary btn-lg btn-block btn-warning" type="submit"> Submit </button>
 </form>
   
   
