🔑🍢 Checkpoint ./views/product.ejs:21466666/18 ./routes/index.js:21466666/4:21478230/2 ./vendor.js:21406927/370 ./views/vendor:21466666/2308 ./models/vendor.js:21478230/294 ./config/keys.js:21478230/14 ./views/added.ejs:21466666/1559

--- a/views/added.ejs
+++ b/views/added.ejs
@@ -20,7 +20,7 @@
         <a class="nav-link active" href="/product">Check All Cuisine</a >
       </li>
       <li class="nav-item">
-        <a class="nav-link active" href="/addNew">Add New Cuisine</a >
+        <a class="nav-link active" href="/addNew">111</a >
       </li>
       <li class="nav-item">
         <a class="nav-link active" href="/vendors">Check Cuisine</a >
