--- a/views/addNew.ejs
+++ b/views/addNew.ejs
@@ -30,7 +30,7 @@
         
      <ul class="navbar-nav ml-auto"> 
 
-          <li class="nav-item"><a class="nav-link" href="/dashboard">Log out</a></li>
+          <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
     </ul>
  </div>
 </nav>
