🐊🚆 Checkpoint ./public/styles.css:21466666/36 ./views/index.ejs:21466666/192

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,7 +85,7 @@
               <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F11540.jpg?v=1605316430226" alt="">
               <div class="card-body">
                 <h4 class="card-title">
-                  <p><a href="/producttype?type=1">Noodles & Pasta</a></p>
+                  <p><a href="/producttype?type=1" style="color:black;">Noodles & Pasta</a></p>
                 </h4>
                 </div>
             </div>
@@ -96,7 +96,7 @@
               <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F92b75d13-e69a-42d3-a65d-fe1f757efb1d.image.png?v=1605316978810" alt="">
               <div class="card-body">
                 <h4 class="card-title">
-                  <p><a href="/producttype?type=2">Main Dishes</a></p>
+                  <p><a href="/producttype?type=2" style="color:black;">Main Dishes</a></p>
                 </h4>
                         </div>
             </div>
@@ -107,7 +107,7 @@
               <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F899b21af-f83a-4e96-ac73-500ba7410b1a.image.png?v=1605316549392" alt="">
               <div class="card-body">
                 <h4 class="card-title">
-                  <p><a href="/producttype?type=3">Dessert</a></p>
+                  <p><a href="/producttype?type=3" style="color:black;">Dessert</a></p>
                 </h4>
               </div>
             </div>
@@ -118,7 +118,7 @@
               <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2Fapp.jpg?v=1605316308869" alt="">
               <div class="card-body">
                 <h4 class="card-title">
-                  <p><a href="/producttype?type=4">Appetizers</a></p>
+                  <p><a href="/producttype?type=4" style="color:black;">Appetizers</a></p>
                 </h4>
                 </div>
             </div>
@@ -129,7 +129,7 @@
               <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F2018-01-Mexican-Chicken-Soup-1.jpg?v=1605316689335" alt="">
               <div class="card-body">
                 <h4 class="card-title">
-                  <p><a href="/producttype?type=5">Soup</a></p>
+                  <p><a href="/producttype?type=5" style="color:black;">Soup</a></p>
                 </h4> 
               </div>
             </div>
@@ -140,7 +140,7 @@
               <img class="card-img-top" src="https://cdn.glitch.com/7e7ca483-ecc3-46ba-938a-a763a493379f%2F20191016025954974.jpg?v=1605316798451" alt="">
               <div class="card-body">
                 <h4 class="card-title">
-                  <p><a href="/producttype?type=6">Poultry & Eggs</a></p>
+                  <p><a href="/producttype?type=6" style="color:black;">Poultry & Eggs</a></p>
                 </h4>
                       </div>
             </div>
