🐷🌊 Checkpoint ./views/welcome.ejs:21466666/1125 ./views/login.ejs:21406927/39

--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,10 +1,34 @@
+<div class="video-section">
+      <div class="video-wrapper">
+        <div class="video-container">
+          <video
+            autoplay=""
+            loop=""
+            muted=""
+            style="margin: auto; position: absolute; z-index: -1; top: 50%; left: 50%; transform: translate(-50%, -50%); visibility: visible; width: 2062px; height: auto;"
+          >
+            <source
+              src="https://cdn.glitch.com/add7b3c2-cd14-44ba-abf1-0a157e78102c%2Fcoverr--06-20-chef-cooking-a-dish-on-a-restaurant-12-4165.mp4?v=1605919048561"
+              type="video/mp4"
+            />
+          </video>
+        </div>
+      </div>
+    </div>
+<style>
+  .card{
+    background-color: rgba(0, 0, 0, 0);
+    top: 200px;
+  }
+  h1 {
+    color: w
+  }
 
+</style>
 <div class="row mt-5">
   <div class="col-md-6 m-auto">
     <div class="card card-body text-center">
-      <h1><i class="fas fa-utensils fa-5x"></i></h1>
-
-       <p>Create an account or login</p>
+      <h1>Welcome to our restaurant!</h1>
       <a href="/users/register" class="btn btn-primary btn-block mb-2"
         >Register</a
       >
