🚧👏 Checkpoint ./views/welcome.ejs:21466666/549

--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -16,12 +16,13 @@
       </div>
     </div>
 <style>
-  .card{
+  .card,.card_body{
     background-color: rgba(0, 0, 0, 0);
-    top: 200px;
+    position: relative;
+    top:150px;
   }
   h1 {
-    color: w
+    color: white;
   }
 
 </style>
