🙈🌔 Checkpoint ./views/welcome.ejs:21466666/292

--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -5,7 +5,9 @@
             autoplay=""
             loop=""
             muted=""
-            style="margin: auto; position: absolute; z-index: -1; top: 50%; left: 50%; transform: translate(-50%, -50%); visibility: visible; width: 2062px; height: auto;"
+            style="margin: auto; position: absolute; z-index: -1; top: 50%; left: 50%; 
+                   transform: translate(-50%, -50%); visibility: visible;
+                   width:100%"
           >
             <source
               src="https://cdn.glitch.com/add7b3c2-cd14-44ba-abf1-0a157e78102c%2Fcoverr--06-20-chef-cooking-a-dish-on-a-restaurant-12-4165.mp4?v=1605919048561"
@@ -19,7 +21,7 @@
   .card,.card_body{
     background-color: rgba(0, 0, 0, 0);
     position: relative;
-    top:150px;
+    top:130px;
   }
   h1 {
     color: white;
@@ -30,6 +32,7 @@
   <div class="col-md-6 m-auto">
     <div class="card card-body text-center">
       <h1>Welcome to our restaurant!</h1>
+      </br></br>
       <a href="/users/register" class="btn btn-primary btn-block mb-2"
         >Register</a
       >
