😎📙 Checkpoint ./routes/index.js:21478230/402 ./views/cart.ejs:21478230/121

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -74,9 +74,9 @@
          </button>
     </form></td></tr>
       <tr><td align="center"><form action="/payCart" method="POST">
-         <button class="btn btn-secondary btn-lg btn-block btn-warning" type="submit">
+         <button class="btn btn-secondary btn-lg btn-block btn-warning" type="submit" href="/pay">
            Pay Cart
-         </button>
+          </button>
     </form></td></tr>
     </table> </div></div></div></div>
     <% } else { %>
