🍱🚓 Checkpoint ./routes/index.js:21478230/8 ./views/cart.ejs:21478230/585 ./views/pay.html:21478230/58

--- a/views/pay.html
+++ b/views/pay.html
@@ -86,8 +86,10 @@
   
   <button class="btn btn-secondary btn-lg btn-block" onclick="location.href='/index'" type="button">
          Back to Home Page</button>
-</div></div>
+
   
   <br/><br/><br/><br/>
+<script src="/script.js" defer></script>
 
 </body>
+  <>
