🍖👯 Checkpoint ./views/cart.ejs:21478230/229 ./routes/index.js:21478230/9

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -73,7 +73,11 @@
            Clear Cart
          </button>
     </form></td></tr>
-      
+      <tr><td align="center"><form action="/payCart" method="POST">
+         <button class="btn btn-secondary btn-lg btn-block btn-warning" type="submit">
+           Pay Cart
+         </button>
+    </form></td></tr>
     </table> </div></div></div></div>
     <% } else { %>
     <p>No products in the Cart.</p>
