🤖🌋 Checkpoint ./views/checkout.ejs:21478230/11581 ./views/cart.ejs:21478230/451

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -75,7 +75,7 @@
     </form></td></tr>
       <tr><td align="center"><form action="/payCart" method="POST">
         
-        <button class="btn btn-secondary btn-lg btn-block btn-warning" onclick="location.href='/index'" type="submit">
+        <button class="btn btn-secondary btn-lg btn-block btn-warning" type="submit" onclick="window.open('/pay.ejs')">
            Pay Cart
            </button>
     </form></td></tr>
