--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -75,7 +75,7 @@
     </form></td></tr>
       <tr><td align="center"><form action="/payCart" method="POST">
         
-        <button class="btn btn-secondary btn-lg btn-block btn-warning" type="submit" onclick="window.open('/pay.ejs')">
+        <button class="btn btn-secondary btn-lg btn-block btn-warning" type="submit">
            Pay Cart
            </button>
     </form></td></tr>
