--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -78,6 +78,8 @@
         <button class="btn btn-secondary btn-lg btn-block btn-warning" type="submit">
            Pay Cart
         </button>
+        <tr><td>Message: <%= msg %></td></tr>
+        
     </form></td></tr>
             
     </table> </div></div></div></div>
