🍄🕍 Checkpoint ./routes/index.js:21478230/750 ./views/cart.ejs:21478230/29

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -78,7 +78,7 @@
         <button class="btn btn-secondary btn-lg btn-block btn-warning" type="submit">
            Pay Cart
         </button>
-        <tr><td>Message: <%= total_price %></td></tr>
+        <tr><td>Message: <%= successful_message %></td></tr>
         
     </form></td></tr>
             
