🐽🍈 Checkpoint ./views/product.ejs:21466666/27 ./views/producttype.ejs:21406927/59:21466666/28 ./views/productadmin.ejs:21466666/27 ./views/addNew.ejs:21466666/29

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -45,7 +45,7 @@
    <div class="row justify-content-center">
      
      <% if (product) { %>
-    <p>There are <%= product.length %> products in the database.</p>
+    <p>There are <%= product.length %> cuisine in the menu.</p>
    <table class="table table-bordered" style="max-width:80%;">
       <% product.forEach(function(product){ %>
       <tr>
