--- a/views/addNew.ejs
+++ b/views/addNew.ejs
@@ -39,7 +39,7 @@
   
  <div class="row justify-content-center">
   <div class="card" style="width:60%;">
-  <h2 class="card-header"><storng style="color: pink">Add</storng> New Cuisine </h2>
+  <h2 class="card-header"><storng style="color: Black">Add</storng> New Cuisine </h2>
   
   <form style="padding:3%;" action="/addOne" method="post">
    
