--- a/views/producttype.ejs
+++ b/views/producttype.ejs
@@ -45,11 +45,11 @@
    <div class="row justify-content-center">
      
      <% if (product) { %>
-    <p>There are <%= product.length %> products in the database.</p>
+    <p>There are <%= product.length %> cuisines in the menu.</p>
    <table class="table table-bordered" style="max-width:80%;">
       <% product.forEach(function(product){ %>
       <tr>
-        <td width="60%" rowspan="5"><img src=<%= product.shoeUrl %> 
+        <td width="60%" rowspan="4"><img src=<%= product.shoeUrl %> 
                   alt="Screenshots of the games" width="100%"></td>
         <td >ID: <%= product.id %></td></tr>
       <tr><td >NAME: <%= product.name %></td></tr>
@@ -60,10 +60,10 @@
      <% if (product.brand =='5') { %><tr><td>BRAND: Soup/td></tr> <% } %>
      <% if (product.brand =='6') { %><tr><td>BRAND: Poultry & Eggs</td></tr> <% } %>
       <tr><td>PRICE: <%= product.price %></td></tr>
-      <tr><td>COLOR: <%= product.color %></td></tr>
+      
  <tr><td colspan="2" align="center"><form action="/addCart?id=<%= product.id %>" method="POST">
    
-         <button class="btn btn-secondary btn-lg btn-block" type="submit">
+         <button class="btn btn-warning btn-secondary btn-lg btn-block" type="submit">
            Add to Cart
          </button>
        </form></td></tr>
